# bufr-dump

./: .gitignore  CHANGES  CMakeLists.txt  MESO_CLOSBF_changes  README.md  SDMEDIt_differences  build.sh
docs/: README.md  Release_Notes.txt
fix/: CMakeLists.txt  bufr_bufrtab.sptrmm  bufr_bufrtab.windsat  bufr_dumplist  wave_bufrtab.ascat  wave_bufrtab.erscat  wave_bufrtab.quikscat
modulefiles/: CMakeLists.txt  bufrdump.lua.tmpl  bufrdump_common.lua  bufrdump_hera.lua  bufrdump_jet.lua  bufrdump_orion.lua  bufrdump_wcoss2.lua
modulefiles/bufr_dumplist/: 2.4.0
modulefiles/bufr_util/: 2.0.0
modulefiles/dumpjb/: 5.2.0
release_notes/: CMakeLists.txt  Release_Notes.txt
sorc/: CMakeLists.txt  README.build  build.sh  clean.sh  clobber.sh  install.sh  load_libs.rc  setlibs.rc
sorc/bufr_chkbfr.fd/: CMakeLists.txt  chkbfr.f  makefile
sorc/bufr_combfr.fd/: CMakeLists.txt  combfr.f  makefile
sorc/bufr_dcodwindsat.fd/: CMakeLists.txt  dcodwindsat.f  makefile
sorc/bufr_dumpmd.fd/: CMakeLists.txt  dumpmd.f  makefile
sorc/bufr_dupair.fd/: CMakeLists.txt  dupair.f  makefile
sorc/bufr_dupcman.fd/: CMakeLists.txt  dupcman.f  makefile
sorc/bufr_dupcor.fd/: CMakeLists.txt  dupcor.f  makefile
sorc/bufr_dupmar.fd/: CMakeLists.txt  dupmar.f  dupmar.f.TESTS  makefile
sorc/bufr_dupmrg.fd/: CMakeLists.txt  dupmrg.f  makefile
sorc/bufr_duprad.fd/: CMakeLists.txt  duprad.f  makefile
sorc/bufr_dupsat.fd/: CMakeLists.txt  dupsat.f  makefile
sorc/bufr_dupshp.fd/: CMakeLists.txt  dupshp.f  makefile
sorc/bufr_dupsst.fd/: CMakeLists.txt  dupsst.f  makefile
sorc/bufr_dupsyp.fd/: CMakeLists.txt  dupsyp.f  makefile
sorc/bufr_duptac.fd/: CMakeLists.txt  duptac.f  makefile
sorc/bufr_dupupr.fd/: CMakeLists.txt  dupupr.f  dupurp.f
sorc/bufr_edtbfr.fd/: CMakeLists.txt  edtbfr.f  makefile
sorc/bufr_geofil.fd/: CMakeLists.txt  geofil.f  makefile
sorc/bufr_quipc.fd/: CMakeLists.txt  makefile  quipc.f
sorc/bufr_raddate.fd/: CMakeLists.txt  makefile  raddate.f
sorc/bufr_supertmi.fd/: CMakeLists.txt  makefile  supertmi.f90
sorc/prepobs_prepssmi.fd/: CMakeLists.txt  makefile  prepssmi.f
sorc/wave_dcodquikscat.fd/: CMakeLists.txt  dcodquikscat.f  makefile
ush/: CMakeLists.txt  bufr_dump_obs.sh  build.sh  check_tanks.sh  download_fix.sh  dumpjb  dumpjb.KEEP_dupuprOFF
versions/: build.ver
